vlib/v/parser/tests/recurisive_optional_struct.vv
struct NodeA {
	next ?NodeA
}

struct NodeB {
	next &NodeB
}

struct NodeC {
	next NodeC
}